--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
   flutter_localization: ^0.2.0
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
