--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_localization: ^0.2.0
   get_it: ^7.6.4
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
