--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,28 +29,28 @@ dependencies:
   jwt_decoder: ^2.0.1
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
-  flutter_localization: ^0.2.0
+  flutter_localizations:
+    sdk: flutter
   get_it: ^7.6.4
   gap: ^3.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   flutter_lints: ^2.0.0
+
 
 
 
 flutter:
 
-
+  generate: true
   uses-material-design: true
 
   assets:
     - assets/images/
-    - assets/translations/ar.json
-    - assets/translations/en.json
 
   # fonts:
   #   - family: Schyler
