--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 
 
 dependencies:
+  path: any
   flutter:
     sdk: flutter
 
@@ -35,6 +36,8 @@ dependencies:
   gap: ^3.0.1
   intl: ^0.18.1
   equatable: ^2.0.5
+  appwrite: ^11.0.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +55,7 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
 
   # fonts:
   #   - family: Schyler
