--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,18 @@ dependencies:
       url: https://github.com/Ansh-Rathod/bottom_nav_bar
   firebase_dynamic_links: ^5.4.8
   firebase_core: ^2.24.2
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  hive_generator:
+  build_runner:
 
 
 
