--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   share: ^2.0.4
+  flutter_widget_from_html_core: ^0.14.10+1
+  expandable_widgets: ^1.0.3+1
+  flutter_widget_from_html: ^0.14.10+1
 
 dev_dependencies:
   flutter_test:
