more-screen finished

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_widget_from_html_core: ^0.14.10+1
   expandable_widgets: ^1.0.3+1
   flutter_widget_from_html: ^0.14.10+1
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
